added final responsive footer to all pages

--- a/html/footer.html
+++ b/html/footer.html
@@ -4,6 +4,11 @@
     <div class="footer-brand">
       <h2>Ruler Tours</h2>
       <p>Premium tours and vehicle rentals crafted for modern explorers. Travel with confidence and class.</p>
+      <div class="footer-social">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
     </div>
 
     <div class="footer-links">
@@ -28,10 +33,10 @@
     </div>
 
     <div class="footer-contact">
-      <h3>Contact</h3>
-      <p>Email: travelagency@gmail.com</p>
-      <p>Phone: +91 Your Number</p>
-      <p>Location: city, India</p>
+      <h3>Contact Us</h3>
+      <p><i class="fas fa-envelope"></i> travelagency@gmail.com</p>
+      <p><i class="fas fa-phone"></i> +91 Your Number</p>
+      <p><i class="fas fa-map-marker-alt"></i> City, India</p>
     </div>
 
   </div>
@@ -39,4 +44,5 @@
   <div class="footer-bottom">
     <p>© 2026 Ruler Tours. All rights reserved.</p>
   </div>
+  <script src="footer.js"></script>
 </footer>
