--- a/html/package.html
+++ b/html/package.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Tour Details - Ruler Tours</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/global.css">
+        <link rel="stylesheet" href="../css/footer.css">
+
 </head>
 <body>
     <header style="display: flex; justify-content: space-between; align-items: center; padding: 10px 5%;">
@@ -41,5 +44,53 @@
         </div>
     </div>
 </section>
+<footer class="footer">
+  <div class="footer-container">
+
+    <div class="footer-brand">
+      <h2>Ruler Tours</h2>
+      <p>Premium tours and vehicle rentals crafted for modern explorers. Travel with confidence and class.</p>
+      <div class="footer-social">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+
+    <div class="footer-links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="html/destinations.html">Tours</a></li>
+        <li><a href="html/rentals.html">Rentals</a></li>
+        <li><a href="html/about.html">About</a></li>
+        <li><a href="html/contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-links">
+      <h3>Services</h3>
+      <ul>
+        <li><a href="html/destinations.html">Luxury Tours</a></li>
+        <li><a href="html/rentals.html">Car Rentals</a></li>
+        <li><a href="html/contact.html">Corporate Trips</a></li>
+        <li><a href="html/package.html">Custom Packages</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <h3>Contact Us</h3>
+      <p><i class="fas fa-envelope"></i> travelagency@gmail.com</p>
+      <p><i class="fas fa-phone"></i> +91 Your Number</p>
+      <p><i class="fas fa-map-marker-alt"></i> City, India</p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2026 Ruler Tours. All rights reserved.</p>
+  </div>
+  <script src="footer.js"></script>
+</footer>
 </body>
 </html>
