--- a/index.html
+++ b/index.html
@@ -1,36 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Ruler Tours</title>
-    <link rel="stylesheet" href="css/global.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ruler Travels</title>
+    <link rel="icon" type="image/png" href="assets/light_logo.png">
+    <link rel="stylesheet" href="style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <header>
-    <a href="index.html" class="logo-wrap" style="display: flex; align-items: center; text-decoration: none; gap: 10px;">
-        <img src="assets/dark_logo.png" alt="Ruler Tours Logo" id="main-logo" style="height: 40px;">
-        <span class="brand-name" style="font-size: 1.5rem; font-weight: bold; color: #000;">Ruler Tours</span>
-    </a>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="html/destinations.html">Tours</a></li>
-            <li><a href="html/rentals.html">Rentals</a></li>
-            <li><a href="html/about.html">About</a></li>
-            <li><a href="html/contact.html">Contact</a></li>
-        </ul>
-    </nav>
+
+<header class="navbar">
+    <div class="nav-left">
+        <img src="assets/light_logo.png" id="logo" class="logo">
+        <h2>Ruler Travels</h2>
+    </div>
+
+    <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tours.html">Tours</a></li>
+        <li><a href="rentals.html">Rentals</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+
+    <div class="nav-right">
+        <button id="theme-toggle">🌙</button>
+        <div class="hamburger" id="hamburger">☰</div>
+    </div>
 </header>
 
-    <section id="hero">
-        <h1>Explore the World like a Ruler.</h1>
-        <p>Premium tours and vehicle rentals for the modern traveler.</p>
-        <br>
-        <a href="html/destinations.html" style="background:black; color:white; padding:10px 20px; text-decoration:none;">Get Started</a>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Explore Rural India Like Never Before</h1>
+            <p>Authentic village experiences, eco-friendly tours, & unforgettable journeys.</p>
+            <a href="tours.html" class="btn-primary">Explore Tours</a>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2026 Ruler Tours Open Source Project</p>
+    <section id="about" class="section">
+
+    <h2>About Ruler Travels</h2>
+    <p>
+        Ruler Travels specializes in authentic rural tourism across India.
+        We create immersive village experiences, eco-friendly stays, wildlife safaris,
+        and countryside adventures that connect travelers with local culture
+        and natural beauty.
+    </p>
+
+</section>
+
+
+<section class="section features-section">
+
+    <h2>Why Choose Us</h2>
+
+    <div class="features-container">
+
+        <div class="feature-box">
+            <h3>🌿 Eco-Friendly Tours</h3>
+            <p>We promote sustainable travel that supports local communities and preserves nature.</p>
+        </div>
+
+        <div class="feature-box">
+            <h3>🏕 Authentic Experiences</h3>
+            <p>Enjoy real village life, traditional food, tea gardens, and wildlife safaris.</p>
+        </div>
+
+        <div class="feature-box">
+            <h3>🚗 Comfortable Transport</h3>
+            <p>Reliable car and bike rentals for a safe and smooth rural journey.</p>
+        </div>
+
+    </div>
+
+</section>
+
+    <section id="contact" class="section light-section">
+        <h2>Contact Us</h2>
+        <p>Email: contact@rulertravels.com</p>
+        <p>Phone: +91 98765 43210</p>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div>
+                <h3>Ruler Travels</h3>
+                <p>Discover rural beauty & eco adventures</p>
+            </div>
+            <div>
+                <h4>Quick Links</h4>
+                <p><a href="tours.html">Tours</a></p>
+                <p><a href="rentals.html">Rentals</a></p>
+            </div>
+            <div>
+                <h4>Contact</h4>
+                <p>+91 98765 43210</p>
+                <p>contact@rulertravels.com</p>
+            </div>
+        </div>
+        <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
