Updated Rental Page

--- a/rentals.html
+++ b/rentals.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="card">
-        <img src="images/car3.jpg">
+        <img src="assets/car3.png">
         <h3>Tempo Traveller</h3>
         <p>12 Seater</p>
         <p>Fare: ₹5,500/day</p>
@@ -81,7 +81,7 @@
 <section class="card-container">
 
     <div class="card">
-        <img src="images/bike1.jpg">
+        <img src="assets/bike1.png">
         <h3>Royal Enfield Classic 350</h3>
         <p>2 Seater</p>
         <p>Fare: ₹1,200/day</p>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="card">
-        <img src="images/bike2.jpg">
+        <img src="assets/bike2.png">
         <h3>Bajaj Avenger 220</h3>
         <p>2 Seater</p>
         <p>Fare: ₹1,000/day</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="card">
-        <img src="images/bike3.jpg">
+        <img src="assets/bike3.png">
         <h3>Honda Activa 6G</h3>
         <p>2 Seater</p>
         <p>Fare: ₹600/day</p>
