--- a/tours.html
+++ b/tours.html
@@ -24,8 +24,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tours.html">Tours</a></li>
         <li><a href="rentals.html">Rentals</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
     </ul>
 
     <div class="nav-right">
@@ -42,7 +42,7 @@
     <section class="card-container">
 
     <div class="card">
-        <img src="images/tour1.jpg">
+        <img src="assets/card1.png">
         <h3>Darjeeling Village Tour</h3>
         <p>Duration: 3 Days</p>
         <p>Timing: 8AM - 6PM</p>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="card">
-        <img src="images/tour2.jpg">
+        <img src="assets/card2.png">
         <h3>Sundarbans Eco Camp</h3>
         <p>Duration: 2 Days</p>
         <p>Timing: 7AM - 5PM</p>
@@ -60,7 +60,7 @@
     </div>
 
     <div class="card">
-        <img src="images/tour3.jpg">
+        <img src="assets/card3.png">
         <h3>Sikkim Himalayan Retreat</h3>
         <p>Duration: 4 Days</p>
         <p>Timing: 7AM - 7PM</p>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="card">
-        <img src="images/tour5.jpg">
+        <img src="assets/card4.png">
         <h3>Mirik Lake Countryside</h3>
         <p>Duration: 2 Days</p>
         <p>Timing: 9AM - 6PM</p>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="card">
-        <img src="images/tour6.jpg">
+        <img src="assets/card5.png">
         <h3>Jaldapara Wildlife Safari</h3>
         <p>Duration: 2 Days</p>
         <p>Timing: 6AM - 4PM</p>
@@ -87,7 +87,7 @@
     </div>
 
     <div class="card">
-        <img src="images/tour7.jpg">
+        <img src="assets/card6.png">
         <h3>Gorumara Forest Escape</h3>
         <p>Duration: 2 Days</p>
         <p>Timing: 6AM - 5PM</p>
