--- a/rentals.html
+++ b/rentals.html
@@ -24,8 +24,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tours.html">Tours</a></li>
         <li><a href="rentals.html">Rentals</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
     </ul>
 
     <div class="nav-right">
