--- a/index.html
+++ b/index.html
@@ -7,33 +7,29 @@
     <title>Ruler Travels</title>
     <link rel="icon" type="image/png" href="assets/light_logo.png">
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-<header class="navbar">
-    <div class="nav-left">
-        <img src="assets/light_logo.png" id="logo" class="logo">
-        <h2>Ruler Travels</h2>
-    </div>
-
-    <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tours.html">Tours</a></li>
-        <li><a href="rentals.html">Rentals</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-
-    <div class="nav-right">
-        <button id="theme-toggle">🌙</button>
-        <div class="hamburger" id="hamburger">☰</div>
-    </div>
-</header>
-
+    <header class="navbar">
+        <div class="nav-left">
+            <img src="assets/light_logo.png" id="logo" class="logo">
+            <h2>Ruler Travels</h2>
+        </div>
+        <ul class="nav-links" id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="rentals.html">Rentals</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="nav-right">
+            <button id="theme-toggle">🌙</button>
+            <div class="hamburger" id="hamburger">☰</div>
+        </div>
+    </header>
 
     <section class="hero">
         <div class="hero-content">
@@ -42,70 +38,94 @@
             <a href="tours.html" class="btn-primary">Explore Tours</a>
         </div>
     </section>
-
     <section id="about" class="section">
+        <h2>About Ruler Travels</h2>
+        <p>
+            Ruler Travels specializes in authentic rural tourism across India.
+            We create immersive village experiences, eco-friendly stays, wildlife safaris,
+            and countryside adventures that connect travelers with local culture
+            and natural beauty.
+        </p>
+    </section>
 
-    <h2>About Ruler Travels</h2>
-    <p>
-        Ruler Travels specializes in authentic rural tourism across India.
-        We create immersive village experiences, eco-friendly stays, wildlife safaris,
-        and countryside adventures that connect travelers with local culture
-        and natural beauty.
-    </p>
-
-</section>
-
-
-<section class="section features-section">
-
-    <h2>Why Choose Us</h2>
-
-    <div class="features-container">
-
-        <div class="feature-box">
-            <h3>🌿 Eco-Friendly Tours</h3>
-            <p>We promote sustainable travel that supports local communities and preserves nature.</p>
+    <section class="section features-section">
+        <h2>Why Choose Us</h2>
+        <div class="features-container">
+            <div class="feature-box">
+                <h3>🌿 Eco-Friendly Tours</h3>
+                <p>We promote sustainable travel that supports local communities and preserves nature.</p>
+            </div>
+            <div class="feature-box">
+                <h3>🏕 Authentic Experiences</h3>
+                <p>Enjoy real village life, traditional food, tea gardens, and wildlife safaris.</p>
+            </div>
+            <div class="feature-box">
+                <h3>🚗 Comfortable Transport</h3>
+                <p>Reliable car and bike rentals for a safe and smooth rural journey.</p>
+            </div>
         </div>
-
-        <div class="feature-box">
-            <h3>🏕 Authentic Experiences</h3>
-            <p>Enjoy real village life, traditional food, tea gardens, and wildlife safaris.</p>
-        </div>
-
-        <div class="feature-box">
-            <h3>🚗 Comfortable Transport</h3>
-            <p>Reliable car and bike rentals for a safe and smooth rural journey.</p>
-        </div>
-
-    </div>
-
-</section>
+    </section>
 
     <section id="contact" class="section light-section">
         <h2>Contact Us</h2>
-        <p>Email: contact@rulertravels.com</p>
-        <p>Phone: +91 98765 43210</p>
+        <div class="contact-container">
+            <div class="contact-info-box">
+                <p>
+                    Planning your next rural adventure? Have questions about our tours or rentals?
+                    Send us a message and we'll respond shortly.
+                </p>
+                <p><strong>Email:</strong> contact@rulertravels.com</p>
+                <p><strong>Phone:</strong> +91 98765 43210</p>
+                <p><strong>Location:</strong> West Bengal, India</p>
+            </div>
+            <div class="contact-form-box">
+                <form id="contactForm">
+                    <div class="form-group">
+                        <input type="text" id="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" id="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" id="phone" placeholder="Your Phone Number" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea id="message" rows="5" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn-primary">Send Message</button>
+                    <p id="formMessage" class="form-message"></p>
+                </form>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
-        <div class="footer-content">
-            <div>
-                <h3>Ruler Travels</h3>
-                <p>Discover rural beauty & eco adventures</p>
-            </div>
-            <div>
-                <h4>Quick Links</h4>
-                <p><a href="tours.html">Tours</a></p>
-                <p><a href="rentals.html">Rentals</a></p>
-            </div>
-            <div>
-                <h4>Contact</h4>
-                <p>+91 98765 43210</p>
-                <p>contact@rulertravels.com</p>
+    <div class="footer-content">
+        <div>
+            <h3>Ruler Travels</h3>
+            <p>Discover rural beauty & eco adventures</p>
+        </div>
+        <div>
+            <h4>Quick Links</h4>
+            <p><a href="tours.html">Tours</a></p>
+            <p><a href="rentals.html">Rentals</a></p>
+        </div>
+        <div>
+            <h4>Contact</h4>
+            <p>+91 98765 43210</p>
+            <p>contact@rulertravels.com</p>
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
-        <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
-    </footer>
+    </div>
+    <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
+</footer>
+
     <script src="script.js"></script>
 </body>
+
 </html>
