--- a/rentals.html
+++ b/rentals.html
@@ -7,110 +7,109 @@
     <title>Ruler Travels</title>
     <link rel="icon" type="image/png" href="assets/light_logo.png">
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-<header class="navbar">
-    <div class="nav-left">
-        <img src="assets/light_logo.png" id="logo" class="logo">
-        <h2>Ruler Travels</h2>
-    </div>
+    <header class="navbar">
+        <div class="nav-left">
+            <img src="assets/light_logo.png" id="logo" class="logo">
+            <h2>Ruler Travels</h2>
+        </div>
 
-    <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tours.html">Tours</a></li>
-        <li><a href="rentals.html">Rentals</a></li>
-        <li><a href="index.html#about">About</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
-    </ul>
+        <ul class="nav-links" id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="rentals.html">Rentals</a></li>
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+        </ul>
 
-    <div class="nav-right">
-        <button id="theme-toggle">🌙</button>
-        <div class="hamburger" id="hamburger">☰</div>
-    </div>
-</header>
-
-
-<section class="page-hero">
-    <h1>Vehicle Rentals</h1>
-</section>
-
-<section class="section">
-    <h2>Car Rentals</h2>
-</section>
-
-<section class="card-container">
-
-    <div class="card">
-        <img src="assets/car2.png">
-        <h3>Mahindra Bolero</h3>
-        <p>7 Seater</p>
-        <p>Fare: ₹2,500/day</p>
-        <p>Timing: 24 Hours</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
-
-    <div class="card">
-        <img src="assets/car1.png">
-        <h3>Toyota Innova</h3>
-        <p>8 Seater</p>
-        <p>Fare: ₹3,500/day</p>
-        <p>Timing: 24 Hours</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
-
-    <div class="card">
-        <img src="assets/car3.png">
-        <h3>Tempo Traveller</h3>
-        <p>12 Seater</p>
-        <p>Fare: ₹5,500/day</p>
-        <p>Timing: 24 Hours</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
-
-</section>
-
-<section class="section">
-    <h2>Bike Rentals</h2>
-</section>
-
-<section class="card-container">
-
-    <div class="card">
-        <img src="assets/bike1.png">
-        <h3>Royal Enfield Classic 350</h3>
-        <p>2 Seater</p>
-        <p>Fare: ₹1,200/day</p>
-        <p>Timing: 6AM - 10PM</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
-
-    <div class="card">
-        <img src="assets/bike2.png">
-        <h3>Bajaj Avenger 220</h3>
-        <p>2 Seater</p>
-        <p>Fare: ₹1,000/day</p>
-        <p>Timing: 6AM - 10PM</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
-
-    <div class="card">
-        <img src="assets/bike3.png">
-        <h3>Honda Activa 6G</h3>
-        <p>2 Seater</p>
-        <p>Fare: ₹600/day</p>
-        <p>Timing: 6AM - 10PM</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
-
-</section>
+        <div class="nav-right">
+            <button id="theme-toggle">🌙</button>
+            <div class="hamburger" id="hamburger">☰</div>
+        </div>
+    </header>
 
 
-<footer class="footer">
+    <section class="page-hero">
+        <h1>Vehicle Rentals</h1>
+    </section>
+
+    <section class="section">
+        <h2>Car Rentals</h2>
+    </section>
+
+    <section class="card-container">
+
+        <div class="card">
+            <img src="assets/car2.png">
+            <h3>Mahindra Bolero</h3>
+            <p>7 Seater</p>
+            <p>Fare: ₹2,500/day</p>
+            <p>Timing: 24 Hours</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
+
+        <div class="card">
+            <img src="assets/car1.png">
+            <h3>Toyota Innova</h3>
+            <p>8 Seater</p>
+            <p>Fare: ₹3,500/day</p>
+            <p>Timing: 24 Hours</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
+
+        <div class="card">
+            <img src="assets/car3.png">
+            <h3>Tempo Traveller</h3>
+            <p>12 Seater</p>
+            <p>Fare: ₹5,500/day</p>
+            <p>Timing: 24 Hours</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
+
+    </section>
+
+    <section class="section">
+        <h2>Bike Rentals</h2>
+    </section>
+
+    <section class="card-container">
+
+        <div class="card">
+            <img src="assets/bike1.png">
+            <h3>Royal Enfield Classic 350</h3>
+            <p>2 Seater</p>
+            <p>Fare: ₹1,200/day</p>
+            <p>Timing: 6AM - 10PM</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
+
+        <div class="card">
+            <img src="assets/bike2.png">
+            <h3>Bajaj Avenger 220</h3>
+            <p>2 Seater</p>
+            <p>Fare: ₹1,000/day</p>
+            <p>Timing: 6AM - 10PM</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
+
+        <div class="card">
+            <img src="assets/bike3.png">
+            <h3>Honda Activa 6G</h3>
+            <p>2 Seater</p>
+            <p>Fare: ₹600/day</p>
+            <p>Timing: 6AM - 10PM</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
+
+    </section>
+
+
+    <footer class="footer">
         <div class="footer-content">
             <div>
                 <h3>Ruler Travels</h3>
@@ -125,11 +124,18 @@
                 <h4>Contact</h4>
                 <p>+91 98765 43210</p>
                 <p>contact@rulertravels.com</p>
+                <div class="social-links">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
         </div>
         <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
     </footer>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
