Tours page refactored

--- a/tours.html
+++ b/tours.html
@@ -7,32 +7,31 @@
     <title>Ruler Travels</title>
     <link rel="icon" type="image/png" href="assets/light_logo.png">
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    
-<header class="navbar">
-    <div class="nav-left">
-        <img src="assets/light_logo.png" id="logo" class="logo">
-        <h2>Ruler Travels</h2>
-    </div>
 
-    <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tours.html">Tours</a></li>
-        <li><a href="rentals.html">Rentals</a></li>
-        <li><a href="index.html#about">About</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
-    </ul>
+    <header class="navbar">
+        <div class="nav-left">
+            <img src="assets/light_logo.png" id="logo" class="logo">
+            <h2>Ruler Travels</h2>
+        </div>
 
-    <div class="nav-right">
-        <button id="theme-toggle">🌙</button>
-        <div class="hamburger" id="hamburger">☰</div>
-    </div>
-</header>
+        <ul class="nav-links" id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="rentals.html">Rentals</a></li>
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+        </ul>
+
+        <div class="nav-right">
+            <button id="theme-toggle">🌙</button>
+            <div class="hamburger" id="hamburger">☰</div>
+        </div>
+    </header>
 
 
     <section class="page-hero">
@@ -41,61 +40,61 @@
 
     <section class="card-container">
 
-    <div class="card">
-        <img src="assets/card1.png">
-        <h3>Darjeeling Village Tour</h3>
-        <p>Duration: 3 Days</p>
-        <p>Timing: 8AM - 6PM</p>
-        <p class="price">₹8,999</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
+        <div class="card">
+            <img src="assets/card1.png">
+            <h3>Darjeeling Village Tour</h3>
+            <p>Duration: 3 Days</p>
+            <p>Timing: 8AM - 6PM</p>
+            <p class="price">₹8,999</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
 
-    <div class="card">
-        <img src="assets/card2.png">
-        <h3>Sundarbans Eco Camp</h3>
-        <p>Duration: 2 Days</p>
-        <p>Timing: 7AM - 5PM</p>
-        <p class="price">₹6,499</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
+        <div class="card">
+            <img src="assets/card2.png">
+            <h3>Sundarbans Eco Camp</h3>
+            <p>Duration: 2 Days</p>
+            <p>Timing: 7AM - 5PM</p>
+            <p class="price">₹6,499</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
 
-    <div class="card">
-        <img src="assets/card3.png">
-        <h3>Sikkim Himalayan Retreat</h3>
-        <p>Duration: 4 Days</p>
-        <p>Timing: 7AM - 7PM</p>
-        <p class="price">₹12,499</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
+        <div class="card">
+            <img src="assets/card3.png">
+            <h3>Sikkim Himalayan Retreat</h3>
+            <p>Duration: 4 Days</p>
+            <p>Timing: 7AM - 7PM</p>
+            <p class="price">₹12,499</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
 
-    <div class="card">
-        <img src="assets/card4.png">
-        <h3>Mirik Lake Countryside</h3>
-        <p>Duration: 2 Days</p>
-        <p>Timing: 9AM - 6PM</p>
-        <p class="price">₹4,999</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
+        <div class="card">
+            <img src="assets/card4.png">
+            <h3>Mirik Lake Countryside</h3>
+            <p>Duration: 2 Days</p>
+            <p>Timing: 9AM - 6PM</p>
+            <p class="price">₹4,999</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
 
-    <div class="card">
-        <img src="assets/card5.png">
-        <h3>Jaldapara Wildlife Safari</h3>
-        <p>Duration: 2 Days</p>
-        <p>Timing: 6AM - 4PM</p>
-        <p class="price">₹7,499</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
+        <div class="card">
+            <img src="assets/card5.png">
+            <h3>Jaldapara Wildlife Safari</h3>
+            <p>Duration: 2 Days</p>
+            <p>Timing: 6AM - 4PM</p>
+            <p class="price">₹7,499</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
 
-    <div class="card">
-        <img src="assets/card6.png">
-        <h3>Gorumara Forest Escape</h3>
-        <p>Duration: 2 Days</p>
-        <p>Timing: 6AM - 5PM</p>
-        <p class="price">₹6,999</p>
-        <button class="btn-primary">Book Now</button>
-    </div>
+        <div class="card">
+            <img src="assets/card6.png">
+            <h3>Gorumara Forest Escape</h3>
+            <p>Duration: 2 Days</p>
+            <p>Timing: 6AM - 5PM</p>
+            <p class="price">₹6,999</p>
+            <button class="btn-primary">Book Now</button>
+        </div>
 
-</section>
+    </section>
 
     <footer class="footer">
         <div class="footer-content">
@@ -112,6 +111,12 @@
                 <h4>Contact</h4>
                 <p>+91 98765 43210</p>
                 <p>contact@rulertravels.com</p>
+                <div class="social-links">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
         </div>
         <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
