--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" type="image/png" href="assets/light_logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -100,30 +102,30 @@
     </section>
 
     <footer class="footer">
-    <div class="footer-content">
-        <div>
-            <h3>Ruler Travels</h3>
-            <p>Discover rural beauty & eco adventures</p>
-        </div>
-        <div>
-            <h4>Quick Links</h4>
-            <p><a href="tours.html">Tours</a></p>
-            <p><a href="rentals.html">Rentals</a></p>
-        </div>
-        <div>
-            <h4>Contact</h4>
-            <p>+91 98765 43210</p>
-            <p>contact@rulertravels.com</p>
-            <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <div class="footer-content">
+            <div>
+                <h3>Ruler Travels</h3>
+                <p>Discover rural beauty & eco adventures</p>
+            </div>
+            <div>
+                <h4>Quick Links</h4>
+                <p><a href="tours.html">Tours</a></p>
+                <p><a href="rentals.html">Rentals</a></p>
+            </div>
+            <div>
+                <h4>Contact</h4>
+                <p>+91 98765 43210</p>
+                <p>contact@rulertravels.com</p>
+                <div class="social-links">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
         </div>
-    </div>
-    <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
-</footer>
+        <p class="copyright">&copy; 2026 Ruler Travels. All rights reserved</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
