--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <header class="navbar">
         <div class="nav-left">
-            <img src="assets/light_logo.png" id="logo" class="logo">
-            <h2>Ruler Travels</h2>
+            <a href="index.html" class="logo-link">
+                <img src="assets/light_logo.png" id="logo" class="logo">
+                <h2>Ruler Travels</h2>
+            </a>
         </div>
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
