Tours Page  Refactored

--- a/tours.html
+++ b/tours.html
@@ -14,9 +14,11 @@
 <body>
 
     <header class="navbar">
-        <div class="nav-left">
-            <img src="assets/light_logo.png" id="logo" class="logo">
-            <h2>Ruler Travels</h2>
+       <div class="nav-left">
+            <a href="index.html" class="logo-link">
+                <img src="assets/light_logo.png" id="logo" class="logo">
+                <h2>Ruler Travels</h2>
+            </a>
         </div>
 
         <ul class="nav-links" id="nav-links">
