Rentalss Page  Refactored

--- a/rentals.html
+++ b/rentals.html
@@ -8,15 +8,19 @@
     <link rel="icon" type="image/png" href="assets/light_logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
     <header class="navbar">
         <div class="nav-left">
-            <img src="assets/light_logo.png" id="logo" class="logo">
-            <h2>Ruler Travels</h2>
+            <a href="index.html" class="logo-link">
+                <img src="assets/light_logo.png" id="logo" class="logo">
+                <h2>Ruler Travels</h2>
+            </a>
         </div>
 
         <ul class="nav-links" id="nav-links">
