--- a/login.html
+++ b/login.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 </head>
 
 <body>
@@ -30,7 +32,9 @@
             <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <div class="nav-right">
+            <a href="login.html" class="btn-login">Login</a>
             <div class="profile-container" id="profile-trigger">
+
                 <img src="https://ui-avatars.com/api/?name=Soumandeep&background=0D8ABC&color=fff" alt="Profile"
                     class="profile-avatar">
                 <div class="profile-dropdown" id="profile-dropdown">
@@ -55,7 +59,14 @@
                 </div>
                 <button type="submit" class="btn-primary" style="width: 100%;">Login</button>
             </form>
+
+            <div class="auth-divider">OR</div>
+            <button class="btn-google" id="googleBtn">
+                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google">
+                Continue with Google
+            </button>
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+
             <p><a href="forgot-password.html" class="forgot-pass-link">Forgot Password?</a></p>
         </div>
     </section>
