--- a/reset-password.html
+++ b/reset-password.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
         rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
@@ -30,6 +32,7 @@
             <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <div class="nav-right">
+            <a href="login.html" class="btn-login">Login</a>
             <button id="theme-toggle">🌙</button>
             <div class="hamburger" id="hamburger">☰</div>
         </div>
