--- a/html/footer.html
+++ b/html/footer.html
@@ -15,20 +15,20 @@
       <h3>Quick Links</h3>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="html/destinations.html">Tours</a></li>
-        <li><a href="html/rentals.html">Rentals</a></li>
-        <li><a href="html/about.html">About</a></li>
-        <li><a href="html/contact.html">Contact</a></li>
+        <li><a href="./destinations.html">Tours</a></li>
+        <li><a href="./rentals.html">Rentals</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
 
     <div class="footer-links">
       <h3>Services</h3>
       <ul>
-        <li><a href="html/destinations.html">Luxury Tours</a></li>
-        <li><a href="html/rentals.html">Car Rentals</a></li>
-        <li><a href="html/contact.html">Corporate Trips</a></li>
-        <li><a href="html/package.html">Custom Packages</a></li>
+        <li><a href="./destinations.html">Luxury Tours</a></li>
+        <li><a href="./rentals.html">Car Rentals</a></li>
+        <li><a href="./contact.html">Corporate Trips</a></li>
+        <li><a href="./package.html">Custom Packages</a></li>
       </ul>
     </div>
 
@@ -44,5 +44,4 @@
   <div class="footer-bottom">
     <p>© 2026 Ruler Tours. All rights reserved.</p>
   </div>
-  <script src="footer.js"></script>
 </footer>
