--- a/html/about.html
+++ b/html/about.html
@@ -12,24 +12,6 @@
 </head>
 <body>
 
-    <header style="display: flex; justify-content: space-between; align-items: center; padding: 10px 5%;">
-        <a href="../index.html" class="logo-wrap" style="display: flex; align-items: center; text-decoration: none; gap: 12px;">
-            <img src="../assets/dark_logo.png" alt="Ruler Tours Logo" id="main-logo" style="height: 45px;">
-            <span class="brand-name" style="font-size: 1.6rem; font-weight: bold; color: #000; font-family: sans-serif;">Ruler Tours</span>
-        </a>
-        <nav>
-            <ul style="display: flex; list-style: none; gap: 25px;">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="destinations.html">Tours</a></li>
-                <li><a href="rentals.html">Rentals</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <hr>
-
     <main class="about-container">
         <section id="our-mission">
             <h1 style="border-left: 5px solid gold; padding-left: 15px;">Our Mission</h1>
@@ -90,9 +72,8 @@
   <div class="footer-bottom">
     <p>© 2026 Ruler Tours. All rights reserved.</p>
   </div>
-  <script src="footer.js"></script>
+  <script src="../javascript/main.js"></script>
+  <script src="../script.js"></script>
 </footer>
-
-    <script src="../javascript/main.js"></script>
 </body>
 </html>
