improve home page ui

--- a/index.html
+++ b/index.html
@@ -23,13 +23,44 @@
             <a href="tours.html" class="btn-primary">Explore Tours</a>
         </div>
     </section>
-    <section id="about" class="section">
+    <section class="section popular-section reveal">
+        <h2>Popular Destinations</h2>
+
+        <div class="popular-container">
+
+            <div class="popular-card">
+                <img src="assets/skmrt.png" alt="">
+                <div class="popular-info">
+                    <h3>Lava & Loleygaon</h3>
+                    <p>Misty forests & peaceful Himalayan views</p>
+                </div>
+            </div>
+
+            <div class="popular-card">
+                <img src="assets/dvt.png" alt="">
+                <div class="popular-info">
+                    <h3>Dooars Retreat</h3>
+                    <p>Tea gardens & wildlife adventures</p>
+                </div>
+            </div>
+
+            <div class="popular-card">
+                <img src="assets/jws.png" alt="">
+                <div class="popular-info">
+                    <h3>Jaldapara Safari</h3>
+                    <p>Rhino safari & forest exploration</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section id="about" class="section reveal">
         <h2>About Ruler Tours</h2>
         <p> Ruler Tours specializes in authentic rural tourism across India. We create immersive village experiences,
             eco-friendly stays, wildlife safaris, and countryside adventures that connect travelers with local culture
             and natural beauty. </p>
     </section>
-    <section class="section features-section">
+    <section class="section features-section reveal">
         <h2>Why Choose Us</h2>
         <div class="features-container">
             <div class="feature-box">
@@ -46,7 +77,21 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="section light-section">
+    <section class="stats-section reveal">
+        <div class="stat">
+            <h3>500+</h3>
+            <p>Happy Travelers</p>
+        </div>
+        <div class="stat">
+            <h3>50+</h3>
+            <p>Destinations</p>
+        </div>
+        <div class="stat">
+            <h3>4.8★</h3>
+            <p>Average Rating</p>
+        </div>
+    </section>
+    <section id="contact" class="section light-section reveal">
 
         <h2>Contact Us</h2>
 
