--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <div id="navbar-container"></div>
     <section class="hero">
         <div class="hero-content">
-            <h1>Explore Rural India Like Never Before</h1>
-            <p>Authentic village experiences, eco-friendly tours, & unforgettable journeys.</p>
+            <h1>We Burn Fuel, You Make Memories</h1>
             <a href="tours.html" class="btn-primary">Explore Tours</a>
         </div>
     </section>
@@ -165,7 +164,6 @@
         <p class="copyright">&copy; 2026 Ruler Tours. All rights reserved</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
 </body>
 
